--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,25 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
     "module": "commonjs",
-    "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
-    "noImplicitAny": true,
-    "sourceMap": true,
-    "baseUrl": ".",
-    "outDir": "dist",
+    "target": "es2015",
     "moduleResolution": "node",
-    "resolveJsonModule": true
-  }
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "downlevelIteration": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "lib": ["es2015", "es2016", "es2017", "dom", "es2018"]
+  },
+  "typeRoots": [
+    "/node_modules/@overwolf/ow-electron-packages-types",
+    "/node_modules/@types"
+  ],
+  "exclude": [
+    "node_modules",
+    "test",
+    "dist",
+    "**/*spec.ts"
+  ],
 }
