feat: complete US 1.1 DoD - add App ID logging, update README, fix TS config
- Add console logs showing App ID and enabled packages (DoD requirement)
- Update README.md with The Bazaar Tracker specific information
- Fix TypeScript deprecation warning: moduleResolution node -> node16
- Update module setting to node16 to match moduleResolution
- All DoD criteria met: app runs, shows App ID, no TS warnings, README updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "node16",
     "esModuleInterop": true,
     "target": "es2015",
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "downlevelIteration": true,
